fixed button spacing

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
     font-family: "Montserrat";
     font-weight: 200;
     margin-bottom: 13px;
-    line-height: 1.4rem;
+    line-height: 1.5rem;
   }
 
   button {
@@ -36,6 +36,8 @@
     text-align: center;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: -5%;
+    margin-top:3%;
     display: flex;
     padding: 5px;
   }
@@ -169,9 +171,10 @@
   /* Background of Specific Sections */
   .backgroundcolored {
     margin: 0 -9999rem;
-    padding: 1.5rem 9999rem;
-    background: #F5EDE2;
     margin-bottom: 1rem;
+    padding: 1rem 9999rem;
+    padding-top: 2rem;
+    background: #F5EDE2;
   }
 
   /* H1 */
@@ -196,6 +199,7 @@
     height: 100%;
     display: block;
     margin-bottom: 15px;
+    padding-top: 10px;
   }
 
   /* Competitive Analysis Section */
@@ -372,21 +376,24 @@
       width: 9%;
       height: 9%;
       float: left;
-      padding-right: 10px;
+      padding-right: 15px;
+      margin-top: 1%;
     }
 
     .load img {
       width: 10%;
       height: 10%;
       float: left;
-      padding-right: 10px;
+      padding-right: 15px;
+      margin-top: 1%;
     }
 
     .done img {
       width: 10%;
       height: 10%;
       float: left;
-      padding-right: 10px;
+      padding-right: 15px;
+      margin-top: 1%;
     }
 
 /* CSS specific to Contact Form */
@@ -536,7 +543,8 @@
   }
 
   .indexconnectbtn {
-    margin-left: -.1rem;
+    float: left;
+    margin-left: 3%;
   }
 
   .pbhomepage {
@@ -559,6 +567,7 @@
 
   .prototypebtn {
     float: left;
+    margin-left: 3%;
   }
 
   /* CSS specific to PointBox Case Study */
@@ -575,10 +584,12 @@
     /* H1 */
     .pointboxtitle {
       font-size: 30px;
+      padding-bottom: 5px;
     }
 
     .PBHeader img {
       padding-bottom: 25px;
+      padding-top: 10px;
       display: block;
       margin-left: auto;
       margin-right: auto;
@@ -588,6 +599,8 @@
     /* Description of app */
     .whatPBIs {
       font-size: 20px;
+      margin-top: 5px;
+      margin-bottom: 5px;
     }
 
     /* Display 3 buttons horizontally */
@@ -771,6 +784,7 @@
       }
       .biobtn {
         float: left;
+        margin-left: 3%;
       }
       
     .uxjourney {
